# bitcoin-wallet-watchguard

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-ghcr.yml  docker-debug-image-builder.yml  docker-image.yml  docker-no-root-debug-images.yml  sync-uv-lock.yml  sync-ux-lock.yml  trivy-repo-scan.yml
derivation-helper/: Cargo.toml
derivation-helper/src/: main.rs
tests/: basic_import_test.py
wallet_watchguard/: cli.py  config.py  conversation.py  crypto.py  db.py  derivation.py  electrum.py  healthcheck.py  mempool.py  models.py  nostr.py  ntfy.py  status.py  tor.py  watcher.py
wallet_watchguard/notifications/: __init__.py  factory.py  formatting.py  manager.py  models.py  ntfy_provider.py
