[project]
name = "wallet-watchguard"
version = "0.1.2.1"
description = "Bitcoin Wallet Watchguard: xpub/descriptor wallet notifications over Electrum/Fulcrum and ntfy"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "PyNaCl>=1.5.0",
  "python-socks[asyncio]>=2.5.0",
]

[project.scripts]
wallet-watchguard = "wallet_watchguard.cli:main"
wwg = "wallet_watchguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wallet_watchguard*"]
