[project]
name = "wallet-watchguard"
version = "0.1.7"
description = "Bitcoin Wallet Watchguard: Talk to your Bitcoin node via Electrum and Ntfy"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "PyNaCl>=1.5.0",
  "python-socks[asyncio]>=2.5.0",
]

[project.scripts]
wallet-watchguard = "wallet_watchguard.cli:main"
wwg = "wallet_watchguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wallet_watchguard*"]
