[project]
name = "wallet-watchguard"
version = "0.2.1"
description = "Bitcoin Wallet Watchguard: Talk to your Bitcoin node via Electrum and Ntfy"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "PyNaCl>=1.5.0",
  "python-socks[asyncio]>=2.8.1",
]

[project.scripts]
wallet-watchguard = "wallet_watchguard.cli:main"
wwg = "wallet_watchguard.cli:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wallet_watchguard*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
