[package]
name = "wwg-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.32", features = ["std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
nostr-sdk = { version = "0.44", features = ["nip44", "nip59"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
